--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "routes.microservice",
+  "name": "routes-microservice",
   "version": "1.0.0",
   "description": "A Node.js and Express.js microservice for managing routes",
-  "main": "server.js",
+  "main": "src/server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [], 
+  "keywords": [],
   "author": "MEI - Grupo 4",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "mongoose": "^8.0.1"
   }
 }
