--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
     "joi": "^17.11.0",
-    "mongoose": "^8.0.1"
+    "mongoose": "^8.0.1",
+    "swagger-jsdoc": "^6.0.0",
+    "swagger-ui-express": "^5.0.0"
   }
 }
