--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "MEI - Grupo 4",
   "license": "ISC",
   "dependencies": {
+    "amqplib": "^0.10.3",
     "axios": "^1.6.2",
     "dotenv": "^8.2.0",
     "express": "^4.18.2",
